Navbar responsivess fixed on small devices

--- a/src/components/profile/ProfileAvatar.css
+++ b/src/components/profile/ProfileAvatar.css
@@ -1,6 +1,6 @@
 div.profile-avatar {
   height: 3rem;
-  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 div.profile-avatar img {
